# Dining_Philosophers

./: CMakeLists.txt  PreventDeadLock.cpp  PreventDeadLock.h  PreventStarvation.cpp  PreventStarvation.h  PreventStarvationDeadLock.cpp  PreventStarvationDeadLock.h  README.md  Simulation.cpp  Simulation.h
No Starvation/: CMakeLists.txt  PreventStarvation.cpp  PreventStarvation.h
No deadlock/: CMakeLists.txt  PreventDeadLock.cpp  PreventDeadLock.h
No deadlock and No starvation/: CMakeLists.txt  PreventStarvationDeadLock.cpp  PreventStarvationDeadLock.h
